Add link RSS feed support
